--- a/css/layout.css
+++ b/css/layout.css
@@ -42,6 +42,21 @@
 	-khtml-box-shadow: 0 25px 50px rgba(0, 0, 0, 0.045);
 }
 
+.footer-fixed {
+	padding: 10px 0;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	z-index: 20;
+	opacity: 1;
+	visibility: visible;
+	transition: all 0.4s ease 0s;
+	-moz-transition: all 0.4s ease 0s;
+	-webkit-transition: all 0.4s ease 0s;
+	-o-transition: all 0.4s ease 0s;
+}
+
 @media (max-width: 1079px) {
 	.header.filled {
 		padding: 30px 0;
