Chnaged Fonts and some animation

--- a/css/blogs.css
+++ b/css/blogs.css
@@ -28,7 +28,7 @@
 .section.started-blog .st-title {
 	margin: 20px 0 10px 0;
 	font-size: 7.91666667vw;
-	font-family: 'Montserrat', helvetica;
+	font-family: "Montserrat", sans-serif;
 	line-height: 7.91666667vw;
 	color: #ffffff;
 	font-weight: 400;
