--- a/css/basic.css
+++ b/css/basic.css
@@ -30,13 +30,15 @@ body {
 	margin: 0;
 	padding: 0;
 	border: none;
-	font-family: 'Hind', helvetica;
+ 	font-family: "Montserrat", sans-serif;
+  	font-optical-sizing: auto;
+  	font-style: normal;
 	font-size: 20px;
 	color: #898989;
 	background: #ffffff;
 	line-height: 20px;
 	letter-spacing: 0em;
-	font-weight: 300;
+	font-weight: 200;
 }
 
 .page {
@@ -300,7 +302,7 @@ h5,
 h6 {
 	margin: 28px 0;
 	font-weight: 400;
-	font-family: 'Eczar', helvetica;
+	font-family: "Montserrat", sans-serif;
 	color: #292929;
 }
 
@@ -481,7 +483,7 @@ a.btn:hover,
 .preloader .spinner .double-bounce2 {
 	width: 100%;
 	height: 100%;
-	background: #ede574;
+	background: #b2bec3;
 	opacity: 0.8;
 	position: absolute;
 	top: 0;
@@ -550,7 +552,7 @@ label,
 legend {
 	display: block;
 	padding-bottom: 10px;
-	font-family: 'Hind', helvetica;
+	font-family: "Montserrat", sans-serif;
 	font-size: 20px;
 }
 
@@ -648,7 +650,7 @@ li {
 code {
 	background: #f9f9f9;
 	font-size: 16px;
-	font-family: 'Hind', helvetica;
+	font-family: "Montserrat", sans-serif;
 	margin: 20px 0;
 	padding: 10px 20px;
 }
@@ -752,7 +754,7 @@ td {
 
 /* 14. Blockquote */
 blockquote {
-	font-family: 'Hind', helvetica;
+	font-family: "Montserrat", sans-serif;
 }
 
 /* 15. Animations */
