--- a/css/layout.css
+++ b/css/layout.css
@@ -96,7 +96,7 @@
 
 .header .logo {
 	float: left;
-	font-family: 'Montserrat', helvetica;
+	font-family: "Montserrat", sans-serif;
 	font-size: 34px;
 	font-weight: 700;
 }
@@ -204,16 +204,16 @@
 	padding: 2px 0 0 0;
 	position: relative;
 	display: block;
-	font-size: 12px;
+	font-size: 14px;
 	color: #ffffff;
 	letter-spacing: 0.2em;
-	font-weight: 500;
-	line-height: 12px;
+	font-weight: 200;
+	line-height: 14px;
 	text-transform: uppercase;
-	box-shadow: inset 0 0 0 #ede574;
-	-moz-box-shadow: inset 0 0 0 #ede574;
-	-webkit-box-shadow: inset 0 0 0 #ede574;
-	-khtml-box-shadow: inset 0 0 0 #ede574;
+	box-shadow: inset 0 0 0 #b2bec3;
+	-moz-box-shadow: inset 0 0 0 #b2bec3;
+	-webkit-box-shadow: inset 0 0 0 #b2bec3;
+	-khtml-box-shadow: inset 0 0 0 #b2bec3;
 	transition: all 0.4s ease 0s;
 	-moz-transition: all 0.4s ease 0s;
 	-webkit-transition: all 0.4s ease 0s;
@@ -222,10 +222,10 @@
 
 .header .top-menu ul li:hover a,
 .header .top-menu ul li.active a {
-	box-shadow: inset 0 -6px 0 #ede574;
-	-moz-box-shadow: inset 0 -6px 0 #ede574;
-	-webkit-box-shadow: inset 0 -6px 0 #ede574;
-	-khtml-box-shadow: inset 0 -6px 0 #ede574;
+	box-shadow: inset 0 -4px 0 #b2bec3;
+	-moz-box-shadow: inset 0 -4px 0 #b2bec3;
+	-webkit-box-shadow: inset 0 -4px 0 #b2bec3;
+	-khtml-box-shadow: inset 0 -4px 0 #b2bec3;
 }
 
 @media (max-width: 1079px) {
@@ -297,7 +297,7 @@
 
 .section .titles .title {
 	margin: 0 0 30px 0;
-	font-family: 'Eczar', helvetica;
+	font-family: "Montserrat", sans-serif;
 	color: #292929;
 	font-size: 34px;
 	line-height: 44px;
@@ -314,7 +314,7 @@
 /* 3. Started */
 .section.started {
 	padding: 0;
-	background: #ede574;
+	background: #b2bec3;
 }
 
 .section.started .slide {
@@ -327,13 +327,17 @@
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-
+@keyframes cursor-blink {
+	0% {
+	  opacity: 0;
+	}
+  }
 .section.started .st-title,
 .section.started .typed-title,
 .section.started .typed-cursor {
 	margin: 20px 0 10px 0;
 	font-size: 7.91666667vw;
-	font-family: 'Montserrat', helvetica;
+	font-family: "Montserrat", sans-serif;
 	line-height: 7.91666667vw;
 	color: #ffffff;
 	font-weight: 400;
@@ -343,6 +347,9 @@
 	-moz-transition: all 0.4s ease 0s;
 	-webkit-transition: all 0.4s ease 0s;
 	-o-transition: all 0.4s ease 0s;
+}
+.section.started .typed-cursor{
+	animation: cursor-blink 1s steps(2) infinite;
 }
 
 @media (max-width: 720px) {
@@ -511,10 +518,10 @@
 
 .section.works .filters .f_btn.active label {
 	color: #292929;
-	box-shadow: inset 0 -6px 0 #ede574;
-	-moz-box-shadow: inset 0 -6px 0 #ede574;
-	-webkit-box-shadow: inset 0 -6px 0 #ede574;
-	-khtml-box-shadow: inset 0 -6px 0 #ede574;
+	box-shadow: inset 0 -3px 0 #b2bec3;
+	-moz-box-shadow: inset 0 -3px 0 #b2bec3;
+	-webkit-box-shadow: inset 0 -3px 0 #b2bec3;
+	-khtml-box-shadow: inset 0 -3px 0 #b2bec3;
 }
 
 .box-items {
@@ -546,7 +553,7 @@
 	top: 16px;
 	right: 22px;
 	display: inline-block; 
-	font-family: "Ionicons"; 
+	font-family: "Montserrat", sans-serif; 
 	speak: none; 
 	font-style: normal; 
 	font-weight: normal; 
@@ -595,10 +602,10 @@
 	font-size: 14px;
 	color: #898989;
 	line-height: 12px;
-	box-shadow: inset 0 -6px 0 #ede574;
-	-moz-box-shadow: inset 0 -6px 0 #ede574;
-	-webkit-box-shadow: inset 0 -6px 0 #ede574;
-	-khtml-box-shadow: inset 0 -6px 0 #ede574;
+	box-shadow: inset 0 -6px 0 #b2bec3;
+	-moz-box-shadow: inset 0 -6px 0 #b2bec3;
+	-webkit-box-shadow: inset 0 -6px 0 #b2bec3;
+	-khtml-box-shadow: inset 0 -6px 0 #b2bec3;
 }
 
 @media (max-width: 1079px) {
@@ -735,10 +742,10 @@ footer .st-soc a:hover .icon {
 	font-size: 14px;
 	color: #898989;
 	line-height: 12px;
-	box-shadow: inset 0 -6px 0 #ede574;
-	-moz-box-shadow: inset 0 -6px 0 #ede574;
-	-webkit-box-shadow: inset 0 -6px 0 #ede574;
-	-khtml-box-shadow: inset 0 -6px 0 #ede574;
+	box-shadow: inset 0 -6px 0 #b2bec3;
+	-moz-box-shadow: inset 0 -6px 0 #b2bec3;
+	-webkit-box-shadow: inset 0 -6px 0 #b2bec3;
+	-khtml-box-shadow: inset 0 -6px 0 #b2bec3;
 }
 
 @media (max-width: 1079px) {
@@ -751,7 +758,7 @@ footer .st-soc a:hover .icon {
 .popup-box .desc h4 {
 	margin: 0 0 15px 0;
 	display: block;
-	font-family: 'Hind', helvetica;
+	font-family: "Montserrat", sans-serif;
 	color: #292929;
 	font-size: 28px;
 	line-height: 1.4;
