--- a/css/blogs.css
+++ b/css/blogs.css
@@ -11,7 +11,7 @@
 .section.started-blog {
 	height: 460px;
 	padding: 0;
-	background: #ede574;
+	background: #b2bec3;
 }
 
 .section.started-blog .slide {
